# ray-traced-fractals

./: .gitmodules  CMakeLists.txt
resources/: compute.glsl  fragment.glsl  vertex.glsl
scripts/: clean_build.bat
src/: camera.cpp  camera.h  main.cpp
